[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/DiceBoy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Entities/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Objects/PlayerBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Lazer_sound.mp3" type="AudioStream" id=4]

[sub_resource type="SphereShape" id=3]
radius = 0.0502493

[sub_resource type="SphereShape" id=4]
radius = 0.0566439

[node name="Bullet" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 2 )

[node name="DiceBoy" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PlayerBullet" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
